[#620]Stream.toList() only available from Java 16 on, replaced it in CollectionsTest, use collect(Collectors.toList()).
Signed-off-by: Anton Pinsky <anton.pinsky@ionos.com>